updated stuff and added the video link
